# TerminalChat

./: Cargo.toml
downloads/: Cargo.toml  client.rs
src/: client.rs  file_transfer.rs  main.rs  message.rs  server.rs  ui.rs
